Fix modal height on small screens

--- a/scss/_patterns_modal.scss
+++ b/scss/_patterns_modal.scss
@@ -25,7 +25,6 @@
     @extend %vf-has-box-shadow;
     @extend %vf-has-round-corners;
 
-    bottom: $spv--large;
     left: $sph--x-large;
     margin-bottom: 0;
     max-height: calc(100% - #{2 * $spv--large});
@@ -34,7 +33,6 @@
     padding-top: 0;
     position: absolute;
     right: $sph--x-large;
-    top: $spv--large;
     width: auto;
 
     @media (min-width: $breakpoint-medium) {
